CoolPlayer Revision History
===========================
Version 219
 + Fixed potential buffer overflow when reading OGG tags
 + Fixed open file dialog not being modal
 + Fixed add directory dialog not being modal
 + Enabled XP visual style support
 + Fixed bitrate display showing parts of previous songs bitrate
 + WAV file bitrate is now shown

Version 218
 + Fixed channels being swapped when toggling EQ
 + Fixed player skin not saving properly

Version 217
 + Now loads .m3u playlists using "Open URL"
 + Fixed using -h,-?,-help on the command line killing existing instances
 + Fixed using -/+showplaylist on commandline messing with toggle playlist
 + Fixed issue when seeking if coolplayer is paused
 + "Just add files" is back
 + Improved options dialog usability (Keyboard input and tab navigation now works and in correct order)
 + Menus now have keyboard accelerators for easier navigation (underlined letters)
 + Fixed length of WAV files not showing in playlist
 + Fixed non valid files being added to playlist (such as .txt)

Version 216
 + Enhanced aoTuV vorbis support.
 + Correct the Makefile(s) there was a minor inconsistency 
   that meant that it would not build.
 + Add -Wall to the compile options so that gcc issues all warnings.
 + Modify the sources to eliminate all of the compiler warnings.
 + Update libogg to the latest version (1.1.3).
 + Provide additional vorbis libraries (latest version = 1.1.2 and the aoTuV r1 variant) 
   which can be used in place of the current version when building CoolPlayer.
 + Create Visual Studio 2005 project files and modifications.
 + Fixed several possible buffer overflows.
 + Compiled against new MS libraries.

Version 215
 + New Mad decoder 0.15.1
 + Added force of close when closing hanging CoolPlayer in network streams
 + Some minor changes

Version 214
 + Fixed loading of WinAmp plugins when not appropriate.
 + Don't use ID3v1.1 when comment is longer than 28 characters.
 + Fixed unnecesary tagging.