@@ -1,14 +1,14 @@
 Key		Action
 -------------------------------------------
 
-Options/toggles
+Options/toggles (Player+Playlist)
 ---------------
 R		Repeat
 S 		Shuffle
 P/CTRL+F4	Playlist
 E/Q		Equalizer
 
-Playback controls (Kp=Keypad)
+Playback controls (Kp=Keypad) (Player+Playlist)
 -----------------
 X/Enter/Kp5	Play/Restart/Unpause
 V/Kp.		Stop
@@ -17,15 +17,17 @@ B/Kp6/CTRL-Right	Next Track
 Z/Kp4/CTRL-Left	Previous Track
 Left     		Skip backwards
 Right		Skip forwards
-Up/Kp8/Kp+  	Volume Up
-Down/Kp2/Kp-	Volume Down
+Up/Kp8/Kp+  	Volume Up (Up is navigation on playlist)
+Down/Kp2/Kp-	Volume Down (Down is navigation on playlist)
 1/2/3...9		Set volume (10%, 20%, 30% etc)
 0/M/TAB		Set volume to 0
 
-Misc
+Misc (Player+Playlist)
 ----
 L/O		Open/Play File
 A		Add files to playlist
+D		Add directory to playlist
+H		Shuffle
 F1		About
 SHIFT+F11	Reload Skin
 SHIFT+F12	Skinmaker-mode
@@ -34,8 +36,6 @@ ALT+F4/ESC	Exit
 Playlist
 --------
 F		Find
-H		Shuffle
-D		Add directory to playlist
 V		Save playlist
 DELETE		Remove selected items
 CTRL-DELETE	Empty list
